# CvMaker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
cvmaker/: __init__.py  cli.py  docx_generator.py  gui.py  parser.py  pdf_generator.py  web_server.py
cvmaker/templates/: compact-narrow.json  compact.json  default.json
cvmaker/web/: app.js  index.html  styles.css
docs/: index.html
examples/: sample_cv.md
